--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </script>
     
     <nav class="p-3 container navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="https://blackpinktest.netlify.app">오징어게임 인물 닮은꼴 테스트</a>
+        <a class="navbar-brand" href="https://squidgameai.netlify.app/">오징어게임 인물 닮은꼴 테스트</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
