--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             var title = "<div class='" + prediction[0].className + "-animal-title'>" + resultTitle + "</div>"
             var explain = "<div class='animal-explain pt-2'>" + resultExplain + "</div>"
             var celeb = "<div class='" + prediction[0].className + "-animal-celeb pt-2 pb-2'>" + resultCeleb + "</div>"
-            var pic = "<img src='" + resultpic +"'width='400' heigt='300'>"
+            var pic = "<img src='" + resultpic +"'width='60%' heigt='auto'>"
             $('.result-message').html(pic + title + explain + celeb );
             console.log(pic);
             var barWidth;
