bmp->jpg by https://squoosh.app/

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                         resultTitle = "성기훈"
                         resultExplain = "예, 저, 저는...저 쌍문동 사는 성기훈인데요..."
                         resultCeleb = "NO.456"
-                        resultpic = "./kihoon.bmp"
+                        resultpic = "./kihoon.jpg"
                         break;
                     case "sangwoo":
                         resultTitle = "조상우"
                         resultExplain = "어차피 우리가 저 돈 가지고 나가려면 다른 놈들 다 죽어야 돼. 형 손에 피 안 묻히게 해줬으면 오히려 고마워해야 되는 거 아니야?"
                         resultCeleb = "NO.218"
-                        resultpic = "./sangwoo.bmp"
+                        resultpic = "./sangwo.jpg"
                         break;
                     case "ilnam":
                         resultTitle = "오일남"
@@ -70,13 +70,13 @@
                         resultTitle = "강새벽"
                         resultExplain = "아저씨... 나 집에 가고 싶어..."
                         resultCeleb = "NO.067"
-                        resultpic = "./saebyeog.bmp"
+                        resultpic = "./saebyeog.jpg"
                         break;
                     case "deoksu":
                         resultTitle = "장덕수"
                         resultExplain = "헤이! 웰컴 투 코리아!"
                         resultCeleb = "NO.101"
-                        resultpic = "./deoksu.bmp"
+                        resultpic = "./deoksu.jpg"
                         break;    
                     default:
                         resultTitle = "알수없음"
