--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <p class="sr-only">오징어게임 인물 닮은꼴 찾기, 인공지능 오징어게임 인물 닮은꼴 찾기, 나와 닮은 연예인, squid game, 얼굴 평가, 오징어게임, 기훈, 상우, 새벽, 일남, 덕수</p>
     </section>
     <div class="ad-banner"><ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-10aVNTKSvknXslV3" 
+ data-ad-unit    = "DAN-FM2x16oUknJWkGi1" 
  data-ad-width   = "320" 
  data-ad-height  = "100"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script></div>
