--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="오징어게임 인물 닮은꼴" />
     <meta property="og:description" content="오징어게임 인물 닮은꼴 찾기, 인공지능 오징어게임 인물 닮은꼴 찾기, 나와 닮은 연예인, squid game, 얼굴 평가, 오징어게임, 리사, 제니, 로제, 지수, 덕수"
     />
-    <meta property="og:image" content="./thumnail.png" />    
+    <meta property="og:image" content="img/squidgame.png" />    
     <meta name="google-site-verification" content="PD9c4HJRQfHMMuxzKekUbCd8jdX6iIqEqsj2S9p3Cvc" />
 </head>
 
