카카오에드핏 빼고 구글 애드센스 넣기

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     />
     <meta property="og:image" content="./thumnail.png" />    
     <meta name="google-site-verification" content="PD9c4HJRQfHMMuxzKekUbCd8jdX6iIqEqsj2S9p3Cvc" />
+
+<!--   구글 에드센스 넣기 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4778921872258874"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <script type="text/javascript">
@@ -160,10 +164,7 @@
         <h4 class="sr-only">본 서비스는 Google의 인공지능 teachable machine 2.0을 활용하였습니다.</h4>
         <p class="sr-only">오징어게임 인물 닮은꼴 찾기, 인공지능 오징어게임 인물 닮은꼴 찾기, 나와 닮은 연예인, squid game, 얼굴 평가, 오징어게임, 기훈, 상우, 새벽, 일남, 덕수</p>
     </section>
-    <div class="ad-banner"><ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-FM2x16oUknJWkGi1" 
- data-ad-width   = "320" 
- data-ad-height  = "100"></ins> 
+  
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script></div>
     <section class="youtube pb-3" id="yotube-mid-link">
         <div class="container mt-3 youtube-cover d-flex flex-row-reverse align-items-center">
