--- a/index.html
+++ b/index.html
@@ -200,7 +200,11 @@
             </div>
         </div>
     </div>
-    
+    <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-FM2x16oUknJWkGi1" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <script>
         function readURL(input) {
             if (input.files && input.files[0]) {
